fix: improved modal display on small screens and with multiple options

--- a/assets/src/scss/_custom-tooltip.scss
+++ b/assets/src/scss/_custom-tooltip.scss
@@ -17,6 +17,7 @@
       .tiob-tooltip-content {
         opacity: 1;
         pointer-events: all;
+        z-index: 11;
       }
     }
   }
